--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "http-status": "^1.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.4",
     "nodemailer": "^6.6.3",
